# lds-first

./: README.md  launcher.py  pyproject.toml  requirements.txt  setup.bat  start.bat  使用说明.md  进度日志.md
.github/workflows/: backfill-history.yml  stock-daily.yml
data/: review_history.json  sw.json
scripts/: backfill_history.py  generate_classification.py  gh_run.py  verify_review.py
stock_analyzer/: __init__.py  auto_scheduler.py  cli.py  config.py  config_manager.py  main.py  requirements.txt
stock_analyzer/analysis/: __init__.py  explainer.py  indicators.py  news_driver.py  scorer.py  screener.py
stock_analyzer/app/: __init__.py  __main__.py
stock_analyzer/app/templates/: backtest.html  cache.html  dashboard.html  review.html  settings.html
stock_analyzer/automation/: __init__.py
stock_analyzer/backtest/: __init__.py
stock_analyzer/cache/: __init__.py
stock_analyzer/data/: __init__.py  fetcher.py  kline.py  loader.py
stock_analyzer/output/: __init__.py  exporter.py  reporter.py
stock_analyzer/report/: __init__.py
stock_analyzer/review/: __init__.py
