[build-system    "flask>=2.0.0",
]
requires = ["setuptools>=61.0"    "flask>=2.0.0",
]
build-backend = "setuptools.build_meta"

[project    "flask>=2.0.0",
]
name = "stock-analyzer"
version = "1.0.0"
description = "股票量化分析工具 — 多策略选股 + 回测 + 复盘"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "akshare>=1.10.0",
    "flask>=2.0.0",
]

[project.scripts    "flask>=2.0.0",
]
stock = "stock_analyzer.cli:main"

[tool.setuptools.packages.find    "flask>=2.0.0",
]
include = ["stock_analyzer*"    "flask>=2.0.0",
]
